{
    "name": "GameControls",
    "maps": [
        {
            "name": "InGameControls",
            "id": "55f1a8a7-1b61-4e0d-b886-584de782f0e6",
            "actions": [
                {
                    "name": "ToggleThruster",
                    "type": "PassThrough",
                    "id": "4bb5978b-3198-4b0f-8ddf-d0b68787d65b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RotateShip",
                    "type": "PassThrough",
                    "id": "6fdcffd9-9020-4059-a3d7-aabe1d13dcc0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f5246fa-0197-4277-8fcd-8af33b761502",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleThruster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02722b51-78d0-4f67-a391-460bb2160fd1",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleThruster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9272c41-61a6-43c0-b201-74d12cee4d89",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleThruster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "KBM",
                    "id": "4530f250-6290-4b06-9c56-b157e4a72f8e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f1f1d634-ecf0-4683-9d63-10f4f47ceb5c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "27604980-f2a5-4c40-beaa-fa55e11f9d24",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Xbox",
                    "id": "41f4b3d7-523c-434e-acfb-dd2e3fbbbad4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "084dfacd-6179-4fb0-b697-7a7f73d1ef66",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ef9eb966-f6a9-40f9-946c-0df279d92470",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad",
                    "id": "73098df1-e1fa-41b5-8554-ff455d6e832a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "245882be-8a10-4139-a169-607a6c7dd7b1",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a6ce4fa9-9cd9-48b2-b643-bbc51fb302d4",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}